# placecare

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md  build.logs  build.rs
db_place/: aaa.txt  place.seq  pp.fasta  ptr.fasta
docs/: index.html
src/: db.rs  io.rs  lib.rs  main.rs  place_desc.rs  place_search.rs
src/db_file/: place.db
