[package]
name = "placecare"
authors = ["Zhixia <zhixiaovo@gmail.com>"]
version = "1.1.0"
edition = "2024"
license = "MIT"
keywords = ["bioinformatics", "sequence-search",]
categories = ["command-line-utilities", "science"]

description = "A toolkit to quickly search for cis-acting regulatory elements using the PLACE database"
homepage = "https://bio-here.github.io/placecare"
documentation = "https://docs.rs/placecare"
repository = "https://github.com/bio-here/placecare"

[profile.release]
opt-level = 3
lto = true
overflow-checks = false
codegen-units = 1
strip = "debuginfo"

[[bin]]
name = "placecare"
path = "src/main.rs"

[lib]
name = "placecare"
path = "src/lib.rs"

[build-dependencies]
bincode = "2.0.1"
env_logger = "0.11.8"
log = "0.4"

[dependencies]
bincode = "2.0.1"
lazy_static = "1.5.0"
bio = "2.2.0"
rayon = "1.10.0"
clap = {version = "4.5" , features = ["derive"]}

[package.metadata.docs.rs]
all-features = true